--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-10 01:31:28
+lastsearch = 2024-08-10 02:53:58
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18
+url = https://foreverbedding.net/bo-ga-chun-velina-v18?srsltid=AfmBOoqkLFT1WPyHRUhraPqPL9eMUmF-F-27pivfAIaw3pAGAwYAD9ac
 
 [shopee.vn]
 match = -104.8%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc020
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOoqtGIMdxzRf8gDisFB7XP6Z8LtP-OzVJyDs7Byqrs2NFlvquyc7
 
 [hoangkimhome.com]
 match = -90.5%%
@@ -59,7 +59,7 @@ url = https://m.enbac.com/?page=list&province_id=ha-noi&cate_alias=&category_id=
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html?srsltid=AfmBOooZrHoAmxk-q3Z218P1gP6XFlp3vBvBWns2Uwnl5na47KHkkF3d
 
 [dongahome.vn]
 match = -57.1%%
