--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-09 22:26:19
+lastsearch = 2024-08-10 02:56:44
 
 [shopee.vn]
-match = -51.9%%
-title = chăn nhung tuyết, chăn nhung loại dày size đại cao cấp ( 3kg
-url = https://shopee.vn/chăn-nhung-tuyết-chăn-nhung-loại-dày-size-đại-cao-cấp-(-3kg-4kg-5kg-)-i.442103984.12041087761
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -174,7 +174,7 @@ url = https://dogiasi.net/san-pham/chan-men-long-tuyet-trang-in-tho-gau-xuat-han
 [bebubam.vn]
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
-url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOoq6ArA7zVYFfj-9Jtf9LdfP2AiANQdokdCfsk7L5JPh4ZZn08-N
 
 [tuoitre.vn]
 match = -59.3%%
