--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-09 23:28:14
+lastsearch = 2024-08-10 02:46:38
 
 [tiki.vn]
 match = -133.3%%
 title = Mua Chăn lông cừu 2 lớp loại dày cho bé nhiều mẫu
-url = https://tiki.vn/chan-long-cuu-2-lop-loai-day-cho-be-nhieu-mau-size-1m4-x-1m-sieu-am-p69905522.html?spid=72012337/
+url = https://tiki.vn/chan-long-cuu-2-lop-loai-day-cho-be-nhieu-mau-size-1m4-x-1m-sieu-am-p69905522.html
 
 [joliefam.vn]
 match = -13.3%%
@@ -17,9 +17,9 @@ title = Chăn cừu pháp Joliefam ghi tối
 url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 
 [www.lazada.vn]
-match = -166.7%%
-title = Chan Long Cuu 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-long-cuu-2m/
+match = -66.7%%
+title = Chăn đắp Lông Cừu 2m Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/chan-dap-long-cuu-2m/
 
 [tokyolife.vn]
 match = -193.3%%
