--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-08-10 02:16:39
+lastsearch = 2024-08-10 02:45:58
 
 [demxanh.com]
-match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html?srsltid=AfmBOopiHpvMsSiKNnSC6YvDuY7pMRgS-621K0S7sVQgEYcxXel3EATK
+match = -21.7%%
+title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
+url = https://demxanh.com/chieu-truc-cao-bang.html?srsltid=AfmBOoqAEjW4hyAzOC1sPZJ_Ec24UDz2RVMrnfNCeEcrCvX-LtH1wnrd
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html?srsltid=AfmBOoqcTDEgwlvg7BILZcYOFjH4C-0dbj2N3yqvYO8uKaU8mPwpVIq4
+match = 21.7%%
+title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOopMNIQctQN9dNXKkf_EbKZV88N7hcObA_mn0SOKpOzImfqCEPlS
 
 [uannga.vn]
 match = 56.5%%
