--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-10 02:20:07
+lastsearch = 2024-08-10 02:49:27
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu Trúc Cao Bằng - Chiếu trúc cá nhân
-url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313558.19277857647
+match = -43.5%%
+title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
+url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
 
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOopW3wc2U3JMNgoZFpx8VRPsvqwPqhKe9a7Pl8OnWPOUSbs2Gg9B
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-160x200.html?srsltid=AfmBOopiA66SHz_wbg52b71SCHwRShLVRcFKfZS6supgaT11SP0N_Ika
 
 [chuyenhangviet.com]
 match = -43.5%%
@@ -32,9 +32,9 @@ title = Xưởng chiếu cây cao bằng | By Cơ sở SX chiếu Tre Việt ...
 url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=watchlist&__rv__=video_home_www_playlist_video_list&locale=cs_CZ
 
 [chieutrucsaigon.com]
-match = 30.4%%
-title = ĐỊA CHỈ BÁN CHIẾU CAO BẰNG HCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/dia-chi-ban-chieu-cao-bang-hcm-37.html
+match = -17.4%%
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [demxanh.com]
 match = -21.7%%
