--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-10 01:41:23
+lastsearch = 2024-08-10 02:47:20
 
 [shopee.vn]
 match = -24.0%%
@@ -24,7 +24,7 @@ url = https://khoaibaby.vn/set-chieu-dieu-hoa-hermon-kem-goi-hk2212
 [vtvhyundai.vn]
 match = -24.0%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOopfU5_v2LKpyButxf_SFfPlS01nmb3-BzY9J9NdhZo3IVpT8GnZ
 
 [voicon.net]
 match = -40.0%%
@@ -39,12 +39,12 @@ url = https://phatdatbinhthoi.com.vn/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-
 [demxanh.com]
 match = -40.0%%
 title = Chiếu điều hòa 4D Hanvico Cool Mattress kẻ kem (XẢ KHO)
-url = https://demxanh.com/chieu-dieu-hoa-4d-hanvico-cool-mattress-ke-kem.html
+url = https://demxanh.com/chieu-dieu-hoa-4d-hanvico-cool-mattress-ke-kem.html?srsltid=AfmBOoqt8jTvbl4ABH-0TRKXFmB9JPhD9YfOEUagIHkpx0iyzNn8ZFci
 
 [tiki.vn]
-match = 16.0%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = -20.0%%
+title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
 
 [goni.vn]
 match = 8.0%%
@@ -54,7 +54,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [www.diepxuan.com]
 match = 8.0%%
 title = Chiếu điều hòa lụa 140x190 kèm gối - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html
+url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190-kem-goi.html?srsltid=AfmBOorqRYBqyUf7SVu-Eodmb3OAF4vb3F3dRctl4JosHBPmsmKPbUWS
 
 [voibaby.vn]
 match = 40.0%%
