--- a/images/chieu-dieu-hoa-lua-140x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-140x190.html
 lastopen = 2024-08-08 17:47:40
 
 [search]
-lastsearch = 2024-08-10 02:22:39
+lastsearch = 2024-08-10 02:49:06
 
 [www.diepxuan.com]
 match = 23.1%%
@@ -24,7 +24,7 @@ url = https://www.lazada.vn/products/chieu-dieu-hoa-soi-may-chieu-ngu-140x190cm-
 [demxanh.com]
 match = 34.6%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
 
 [tiki.vn]
 match = -11.5%%
@@ -32,9 +32,9 @@ title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu lụa điều hòa
 
 [shopee.vn]
-match = -30.8%%
-title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
-url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
+match = -11.5%%
+title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [thegioidemviet.vn]
 match = -19.2%%
