--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-10 02:24:45
+lastsearch = 2024-08-10 03:00:13
 
 [helloviettravel.com]
 match = -187.5%%
-title = Tour du lịch xuyên Việt 21 ngày - Hello Việt Nam Travel
-url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
+title = Tour xuyên Việt 18 ngày 17 đêm - Hello Việt Nam Travel
+url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
 
 [saovangtravel.com]
 match = -50.0%%
@@ -72,9 +72,9 @@ title = Top 18 Điểm du lịch Hải Phòng tuyệt đẹp không thể bỏ q
 url = https://mia.vn/cam-nang-du-lich/18-diem-du-lich-hai-phong-tuyet-dep-phan-4484
 
 [www.ivivu.com]
-match = -187.5%%
-title = Du lịch Phú Yên mê mẩn tại 18 điểm tham quan nổi tiếng
-url = https://www.ivivu.com/blog/2024/05/du-lich-phu-yen-me-man-tai-18-diem-tham-quan-noi-tieng/
+match = -100.0%%
+title = Du lịch New York đừng quên 18 địa danh này
+url = https://www.ivivu.com/blog/2017/09/du-lich-new-york-dung-quen-18-dia-danh-nay/
 
 [www.dulichxanh.com.vn]
 match = -143.8%%
@@ -144,7 +144,7 @@ url = https://thoibaotaichinhvietnam.vn/ha-noi-6-thang-dau-nam-tong-thu-tu-khach
 [bvhttdl.gov.vn]
 match = -187.5%%
 title = Điểm báo hoạt động ngành Văn hóa, Thể thao và Du lịch ...
-url = https://bvhttdl.gov.vn/diem-bao-hoat-dong-nganh-van-hoa-the-thao-va-du-lich-ngay-18-6-2024-20240618081335983.htm
+url = https://bvhttdl.gov.vn/diem-bao-hoat-dong-nganh-van-hoa-the-thao-va-du-lich-ngay-18-7-2024-20240718112006752.htm
 
 [baolaocai.vn]
 match = 0.0%%
