--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-10 02:11:01
+lastsearch = 2024-08-10 03:00:58
 
 [www.diepxuan.com]
 match = 14.3%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOooN1NFOQi0tvFVBTsSWGd2W9-U3-1ppf8uMyHX_aIHdTYmI6GPO
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
 match = -128.6%%
