--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-08-09 22:28:07
+lastsearch = 2024-08-10 02:51:28
 
 [shopee.vn]
 match = -90.9%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/61553157173242/
 [www.lazada.vn]
 match = -86.4%%
 title = Chiếu Nhựa 2mx 3m Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?page=3
+url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?page=3&srsltid=AfmBOorgN-RdPo3CDUD5yc62kyU2Sj7g8orTtWrXngbX2aZleRjJMSE1
 
 [tiki.vn]
 match = -86.4%%
