--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-09 23:19:08
+lastsearch = 2024-08-10 02:59:53
 
 [batdongsan.com.vn]
 match = -180.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -66.7%%
-title = Baïeta - Cocktails & Chic tapas
-url = https://www.facebook.com/baietasaigon.restaurant/
+match = -60.0%%
+title = Celadon Sports & Resort Club
+url = https://www.facebook.com/CeladonSRC/?locale=vi_VN
 
 [lacvietauction.vn]
 match = -80.0%%
