--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-10 02:13:09
+lastsearch = 2024-08-10 02:55:19
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqzrytMTWEb2-8TiozjiWEBurGIYkc2wPH_fC-gyDaeWQYMGbqd
 
 [vongxepsaigon.vn]
 match = -133.3%%
