--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-10 01:41:02
+lastsearch = 2024-08-10 02:56:23
 
 [www.lazada.vn]
 match = -193.3%%
 title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOorRqCfx0nwF6cusXO-Lb7mClIwPR82vQXZ2SEGI4yABwX2VeWkd
 
 [shopee.vn]
 match = 13.3%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoqUY5sMzkFOwNAtk3CMKLXC1rr7BSEZtEdM2iDtihksxps4v0n9
 
 [chus.vn]
 match = -173.3%%
@@ -29,7 +29,7 @@ url = https://chus.vn/vo-goi-vuong-hmong/
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOoojKqK6Dy52hotIzPydQLY3KkZJs1C-joMtNuSTgWE-YSZy55Wy
 
 [lepetit.com.vn]
 match = -6.7%%
@@ -179,5 +179,5 @@ url = https://sinhvien.ufm.edu.vn/hotFerrID.html
 [foreverbedding.net]
 match = -153.3%%
 title = Bộ Sưu Tập Vỏ Gối Cao Cấp Đẹp Mê Ly Tại FOREVER
-url = https://foreverbedding.net/vo-goi
+url = https://foreverbedding.net/vo-goi?srsltid=AfmBOoovmHk4DYCpbnc6gu3LraMyGZ0-Y_l7QCLzNlGGft-thxohm_OF
 
