--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-10 02:58:49
+lastsearch = 2024-08-10 03:24:16
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -19,12 +19,12 @@ url = https://songhong.info/chan-ga-goi-bc16
 [demxanh.com]
 match = -19.0%%
 title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
-url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html?srsltid=AfmBOopYwAG6u-0F71eko75thCR5cdyLmu-pwsF-p6TkyAAN6VqUWoix
+url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v16?srsltid=AfmBOop_5-aCXhYBdK5LsoSPTcgOZ0jsZS19SOua5DZ6B30v51fG-zfQ
+url = https://foreverbedding.net/bo-ga-chun-velina-v16
 
 [changagoidemsonghong.com]
 match = -38.1%%
