--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-09 18:55:41
+lastsearch = 2024-08-10 03:17:42
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -112.5%%
-title = VCS LMHT - TỈ LỆ DỰ ĐOÁN CẶP TRẬN BÁN KẾT ...
-url = https://m.facebook.com/story.php/?story_fbid=461630403440955&id=100087819968175
+match = -206.2%%
+title = Trận chiến vì danh dự - GAM vs TS | Bán Kết Nhánh Thắng 1 ...
+url = https://m.facebook.com/vcslmht/videos/trận-chiến-vì-danh-dự-gam-vs-ts-bán-kết-nhánh-thắng-1-vcs-2024-mùa-hè/892848602698546/
 
 [baomoi.com]
 match = -193.8%%
