--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-10 02:55:19
+lastsearch = 2024-08-10 03:17:00
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -29,12 +29,12 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqzrytMTWEb2-8TiozjiWEBurGIYkc2wPH_fC-gyDaeWQYMGbqd
+url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -133.3%%
-title = Chiếu trúc chiếu tre loại tốt giá rẻ tại TPHCM - Miễn phí giao ...
-url = https://vongxepsaigon.vn/chieu-truc/
+match = -123.8%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-160cm/
 
 [thegioichieutruc.com]
 match = -47.6%%
