--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-10 02:12:47
+lastsearch = 2024-08-10 03:25:20
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -99,7 +99,7 @@ url = https://en.wikipedia.org/wiki/Homeowner_association
 [www.doorloop.com]
 match = 0.0%%
 title = 
-url = https://www.doorloop.com/laws/arizona-hoa-laws
+url = https://www.doorloop.com/laws/texas-hoa-laws
 
 [www.newhomesource.com]
 match = 0.0%%
@@ -352,9 +352,9 @@ title = buc anh dep - elle man - 18
 url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-45-53-pm/
 
 [books.google.com]
-match = -158.8%%
-title = Bradshaw's monthly railway and steam navigation guide
-url = https://books.google.com/books?id=fjsGAAAAQAAJ&pg=RA2-PA41&lpg=RA2-PA41&dq=man+in+hoa+dep+18&source=bl&ots=__nukZPrYu&sig=ACfU3U2WBPeTNAeJoohlI9nDhawhPzrbCw&hl=en&sa=X&ved=2ahUKEwiIrprOzuSHAxVSEFkFHX8oAvcQ6AF6BAgaEAM
+match = -105.9%%
+title = The Monthly Army List - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+18&source=bl&ots=kbdohf9_fQ&sig=ACfU3U2oTr5n-ODBPvxAG_1rJxrVtqW5RA&hl=en&sa=X&ved=2ahUKEwjTxOmJ3-iHAxVrEFkFHWHQL9QQ6AF6BAhBEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -700,4 +700,9 @@ url = https://hellohoa.com/hoa-dep/hoa-mau-tim/
 match = -88.2%%
 title = Top 18+ Kiểu Tóc Nam Xoăn Đẹp Nhất Năm 2023
 url = https://aristino.com/blog/top-18-kieu-toc-nam-xoan-dep-nhat-nam-2023/
+
+[fptshop.com.vn]
+match = -164.7%%
+title = Tổng hợp 50+ hình nền hoa đẹp khó cưỡng cho điện thoại ...
+url = https://fptshop.com.vn/tin-tuc/trends/tong-hop-50-hinh-nen-hoa-dep-kho-cuong-cho-dien-thoai-may-tinh-165827
 
