--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-08-10 01:45:17
+lastsearch = 2024-08-10 03:22:52
 
 [demxanh.com]
 match = -84.2%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOopWp7XbSkoGglSabqJcVvrMlLHoDsIXGaKeM_FgdXRcDzQ7jv1D
+url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
 match = -73.7%%
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -63.2%%
-title = 10 Khách sạn giá rẻ tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/HotelsList-Australia-Cheap-Hotels-zfp12992448.html
+match = -73.7%%
+title = 10 Khách sạn tốt nhất tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Hotels-g255055-Australia-Hotels.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
@@ -258,7 +258,7 @@ url = https://gis.harnett.org/portal/home/search.html?t=content&q=tags:"efektler
 
 [www.booking.com]
 match = -73.7%%
-title = 10 Best Tam Ðảo Hotels, Vietnam (From $19)
+title = Tam Ðảo - Hotels in Vietnam - Booking.com's
 url = https://www.booking.com/city/vn/tam-dao.html
 
 [spie.org]
